java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddThrowsClauseHint1-hints.pass
Add throws clause for javax.swing.text.BadLocationException
Surround Statement with try-catch
Surround Block with try-catch
